# DocumentReader

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  LICENSE  QUICKSTART.md  README.md
resources/: resources.qrc
src/: config.h  main-minimal.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/document/: documentfactory.cpp  documentfactory.h  documentreader.cpp  documentreader.h  imagereader.cpp  imagereader.h  pdfreader-full.h  pdfreader.cpp  pdfreader.h
src/widgets/: documentviewer.cpp  documentviewer.h  thumbnailwidget.cpp  thumbnailwidget.h
